// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubaccountTypeaheadWrapper renders subaccounts typeahead 1`] = `
<Connect(SubaccountTypeahead)
  label="Start typing"
  name="example"
  onChange={[MockFunction]}
  placeholder="example account"
  selectedItem="subaccount-one"
  subaccounts={
    Array [
      Object {
        "value": "subaccount-one",
      },
      Object {
        "value": "subaccount-two",
      },
    ]
  }
/>
`;

exports[`SubaccountTypeaheadWrapper renders subaccounts typeahead with error 1`] = `
<Connect(SubaccountTypeahead)
  error="Oh no!"
  label="Start typing"
  name="example"
  placeholder="example account"
  subaccounts={
    Array [
      Object {
        "value": "subaccount-one",
      },
      Object {
        "value": "subaccount-two",
      },
    ]
  }
/>
`;
